# new_obj_allocation

./: .clang-format  .gitignore  CMakeLists.txt  stackoverflow.txt  stackoverflow.txt~  verify_out.py
folly/: CMakeLists.txt
lib/allocator/common/: internal_returns.h  safe_atomics.h  vec_ops.h  vec_ops.h~
lib/allocator/config/: slab_config.h~
lib/allocator/rseq/: #rseq_ops.h#  .#rseq_ops.h  rseq_asm_defs.h  rseq_base.h  rseq_common.h  rseq_helpers.h  rseq_ops.h
lib/allocator/slab_layout/: .#super_slab.h  compile_commands.json  core_cache.h  core_cache.h~  create_slab_type.h  obj_slab.h  slab_config.h  slab_config.h~  slab_manager.h  super_slab.h  thread_cache.h  thread_cache.h~
lib/misc/: cpp_attributes.h  error_handling.h  macro_helper.h
lib/optimized/: bits.h  bits_asm.h  const_math.h  division.h  division.h~  multiply.h  multiply.h~  vmath.h  vmath.h~
lib/system/: PRECOMPUTED_SYS_INFO.h  memory.h  memory.h~  sys_info.h
lib/timing/: stats.cc  stats.h  thread_helper.cc  thread_helper.h
lib/util/: arg.cc  verbosity.h
src/: div_test.cc  div_test.cc~  hset_test.cc  hset_test.cc~  mult_test.cc  mult_test.cc~  pthread_self_test.cc  pthread_self_test.cc~  rseq_test.cc  rseq_test.cc~  slab_test.cc  tc.cc  tc.cc~
